# mailsh

./: .travis.yml  LICENSE  README.md  interface.txt  mailsh.cabal  package.yaml  stack.nix  stack.yaml
app/: ANSI.hs  Browse.hs  Commands.hs  Compose.hs  Format.hs  Main.hs  MessageRef.hs  Render.hs  RichString.hs  Util.hs
nix/: default.nix  purebred-email.nix
src/Data/: CachedDir.hs  Reparser.hs
src/Data/Attoparsec/ByteString/: Utils.hs
src/Data/Attoparsec/ByteString/Char8/: Utils.hs
src/Data/String/: WordWrap.hs
src/Mailsh/: Compose.hs  Fields.hs  Filter.hs  Maildir.hs  Message.hs  MessageNumber.hs  MimeRender.hs  MimeType.hs  Operations.hs  Parse.hs  PersistentInstances.hs  Printer.hs  Render.hs  Rfc5322Date.hs  Store.hs  Types.hs
src/Mailsh/Message/: Charsets.hs  ContentType.hs  Mailbox.hs  Rfc2047.hs  Utf8.hs
src/Mailsh/Printer/: Simple.hs  Types.hs  Utils.hs
src/Mailsh/Store/: Message.hs  PersistentInstances.hs  Schema.hs  Store.hs
src/Mailsh/Types/: FilterExp.hs  Flag.hs  Limit.hs  MailboxRef.hs  MessageRef.hs
src/Network/: Email.hs
src/Network/Email/: Charset.hs  Message.hs  Parser.hs  Render.hs  Rfc2047.hs  Rfc2234.hs  Rfc2822.hs  Types.hs
test/: .MIME.hs.swp  Email.hs  MIME.hs  Main.hs  Message.hs  Roundtrip.hs  Types.hs
test/data/misc/: msg_01.txt
test/expected/cpython/: msg_01.txt  msg_02.txt  msg_03.txt  msg_04.txt  msg_05.txt  msg_06.txt  msg_07.txt  msg_08.txt  msg_10.txt  msg_11.txt  msg_12.txt  msg_13.txt  msg_14.txt  msg_15.txt  msg_16.txt  msg_17.txt  msg_18.txt  msg_20.txt  msg_21.txt  msg_22.txt  msg_23.txt  msg_24.txt  msg_26.txt  msg_27.txt  msg_28.txt  msg_29.txt  msg_30.txt  msg_31.txt  msg_32.txt  msg_33.txt  msg_34.txt  msg_36.txt  msg_37.txt  msg_38.txt  msg_39.txt  msg_40.txt  msg_41.txt  msg_42.txt  msg_45.txt  msg_46.txt
test/expected/misc/: msg_01.txt
testdata/mime/composed/: attachment.txt
testdata/mime/misc/: duplicate-headers.txt  encoded-words.txt  itchio.txt
