name:                mailsh
version:             0.1.0
synopsis:            Mail at the shell.
description:         Command line mail user agent for maildirs.
homepage:            https://github.com/talanis85/mailsh#readme
license:             BSD3
license-file:        LICENSE
author:              Philip Kranz
maintainer:          philip.kranz@googlemail.com
copyright:           2016 Philip Kranz
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.WordWrap
                     , Mailsh.Compose
                     , Mailsh.Filter
                     , Mailsh.Maildir
                     , Mailsh.MimeRender
                     , Mailsh.Parse
                     , Mailsh.Store
                     , Mailsh.Types
                     , Network.Email
  other-modules:       Data.Attoparsec.ByteString.Char8.Utils
                     , Mailsh.PersistentInstances
                     , Network.Email.Charset
                     , Network.Email.Message
                     , Network.Email.Render
                     , Network.Email.Rfc2047
                     , Network.Email.Rfc2234
                     , Network.Email.Rfc2822
                     , Network.Email.Types
  build-depends:       base >=4.8 && <5
                     , acid-state
                     , attoparsec
                     , attoparsec-expr
                     , base64-string
                     , bytestring
                     , containers
                     , data-fix
                     , directory
                     , encoding
                     , esqueleto
                     , filepath
                     , lens
                     , mime
                     , mime-mail
                     , mime-types
                     , mmorph
                     , monad-logger
                     , mtl
                     , old-locale
                     , old-time
                     , pandoc
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , process
                     , safecopy
                     , text
                     , time
                     , time-compat
  default-language:    Haskell2010
  ghc-options:         -fwarn-unused-imports
  default-extensions:  RankNTypes

executable mailsh
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Browse
                     , Compose
                     , MessageRef
                     , Render
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-unused-imports
  build-depends:       base >=4.8 && <5
                     , ansi-terminal
                     , ansi-wl-pprint
                     , brick
                     , bytestring
                     , directory
                     , filepath
                     , gitrev
                     , mailsh
                     , monad-logger
                     , mtl
                     , old-locale
                     , old-time
                     , optparse-applicative
                     , parsec
                     , process
                     , tar
                     , terminal-size
                     , text
                     , time
                     , vector
                     , vty
  default-language:    Haskell2010
  default-extensions:  RankNTypes

test-suite mailsh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.8 && <5
                     , mailsh
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-unused-imports
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/talanis85/mailsh
