name:                mailsh
version:             0.1.0
synopsis:            Mail at the shell.
description:         Command line mail user agent for maildirs.
homepage:            https://github.com/talanis85/mailsh#readme
license:             BSD3
license-file:        LICENSE
author:              Philip Kranz
maintainer:          philip.kranz@googlemail.com
copyright:           2016 Philip Kranz
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.WordWrap
                     , Mailsh.Compose
                     , Mailsh.Fields
                     , Mailsh.Filter
                     , Mailsh.Maildir
                     , Mailsh.Message
                     , Mailsh.MimeRender
                     , Mailsh.MimeType
                     , Mailsh.Parse
                     , Mailsh.Rfc5322Date
                     , Mailsh.Store
                     , Mailsh.Types
  other-modules:       Data.Attoparsec.ByteString.Char8.Utils
                     , Data.Attoparsec.ByteString.Utils
                     , Mailsh.PersistentInstances
  build-depends:       base >=4.8 && <5
                     , attoparsec
                     , attoparsec-expr
                     , base64-string
                     , bytestring
                     , case-insensitive
                     , containers
                     , directory
                     , esqueleto
                     , filepath
                     , html-conduit
                     , iconv
                     , lens
                     , mime-mail
                     , mime-types
                     , mmorph
                     , monad-logger
                     , mtl
                     , old-locale
                     , old-time
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , process
                     , purebred-email
                     , safecopy
                     , text
                     , time
                     , time-compat
                     , wl-pprint
                     , xml-conduit
  default-language:    Haskell2010
  ghc-options:         -fwarn-unused-imports
  default-extensions:  RankNTypes

executable mailsh
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Compose
                     , MessageRef
                     , Render
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-unused-imports
  build-depends:       base >=4.8 && <5
                     , ansi-terminal
                     , ansi-wl-pprint
                     , attoparsec
                     , bytestring
                     , directory
                     , filepath
                     , gitrev
                     , lens
                     , mailsh
                     , mime-mail
                     , monad-logger
                     , mtl
                     , old-locale
                     , old-time
                     , optparse-applicative
                     , parsec
                     , process
                     , tar
                     , terminal-size
                     , text
                     , time
                     , vector
  default-language:    Haskell2010
  default-extensions:  RankNTypes

test-suite mailsh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:
  build-depends:       base >=4.8 && <5
                     , bytestring
                     , directory
                     , HUnit
                     , mailsh
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-unused-imports
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/talanis85/mailsh
