name:                mailsh
version:             0.1.0
synopsis:            Mail at the shell.
description:         Command line mail user agent for maildirs.
homepage:            https://github.com/talanis85/mailsh#readme
license:             BSD3
license-file:        LICENSE
author:              Philip Kranz
maintainer:          philip.kranz@googlemail.com
copyright:           2016 Philip Kranz
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Reparser
                     , Mailsh.Compose
                     , Mailsh.Maildir
                     , Mailsh.MimeRender
                     , Mailsh.Store
                     , Mailsh.Store.Message
                     , Mailsh.Store.PersistentInstances
                     , Mailsh.Store.Schema
                     , Mailsh.Store.Store
                     , Mailsh.Message
                     , Mailsh.Message.Charsets
                     , Mailsh.Message.ContentType
                     , Mailsh.Message.Mailbox
                     , Mailsh.Message.Utf8
                     , Mailsh.Types
                     , Mailsh.Types.FilterExp
                     , Mailsh.Types.Flag
                     , Mailsh.Types.Limit
                     , Mailsh.Types.MailboxRef
                     , Mailsh.Types.MessageRef
  build-depends:       base >=4.8 && <5
                     , attoparsec
                     , attoparsec-expr
                     , base64-string
                     , bytestring
                     , case-insensitive
                     , containers
                     , directory
                     , esqueleto
                     , filepath
                     , html-conduit
                     , html-entities
                     , hostname
                     , iconv
                     , lens
                     , mime-mail
                     , mime-types
                     , mmorph
                     , monad-logger
                     , mtl
                     , old-locale
                     , old-time
                     , parsec
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , process
                     , purebred-email
                     , random
                     , safecopy
                     , text
                     , text-icu
                     , time
                     , time-compat
                     , uuid
                     , wl-pprint
                     , xml-conduit
  default-language:    Haskell2010
  ghc-options:         -fwarn-unused-imports
  default-extensions:  FlexibleContexts
                     , OverloadedStrings
                     , RankNTypes

executable mailsh
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       ANSI
                     , Browse
                     , Commands
                     , Format
                     , Render
                     , RichString
                     , Util
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-unused-imports
  build-depends:       base >=4.8 && <5
                     , ansi-terminal
                     , ansi-wl-pprint
                     , attoparsec
                     , bytestring
                     , case-insensitive
                     , directory
                     , disguise-gtk
                     , filepath
                     , gitrev
                     , lens
                     , mailsh
                     , mime-mail
                     , monad-logger
                     , mtl
                     , old-locale
                     , old-time
                     , optparse-applicative
                     , parsec
                     , process
                     , tar
                     , terminal-size
                     , text
                     , time
                     , vector
                     , wcwidth
                     , word-wrap
                     , zippers
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                     , OverloadedStrings
                     , RankNTypes

test-suite mailsh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Message
                     , MIME
                     , Types
  build-depends:       base >=4.8 && <5
                     , bytestring
                     , case-insensitive
                     , generic-random
                     , lens
                     , mailsh
                     , QuickCheck
                     , quickcheck-instances
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-unused-imports
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , RankNTypes

source-repository head
  type:     git
  location: https://github.com/talanis85/mailsh
